# Inaam

./: .gitignore  CHANGELOG.md  Makefile  README.md
apps/server/: Dockerfile  README.md  _env.local  main.py  pyproject.toml
apps/server/alembic/: env.py
apps/server/alembic/versions/: 02ddb3c83275_add_task_type_to_tasks.py  04a077ae8878_add_recurring_task_fields_optional.py  0ae69df25db9_add_recurring_task_fields.py  1e73b3a41e01_remove_quests_objectives.py  25622824a8ff_make_is_recurring_not_null.py  55805613d7af_add_pinned_column_optional.py  6675cb803147_enforce_non_null_user_progress.py  7deccecb3d81_add_user_id_to_all_models.py  8d64949ba26a_make_pinned_column_not_null.py  a64d76dddf41_initial_migration.py  a9a42456cd97_rename_reward_types_v2.py  ba779cb42b1d_initial_migration_v4.py  ef992e352889_add_user_progress_and_rank_history.py
apps/server/api/auth/: routes.py
apps/server/api/health/: routes.py
apps/server/api/points/: routes.py
apps/server/api/progression/: routes.py
apps/server/core/: config.py  database.py  ranks.py  security.py
apps/server/models/: __init__.py  base.py  enums.py  reward.py  task.py  transaction.py  user.py  user_progress.py  user_rank_history.py
apps/server/schemas/: auth.py  base.py  progression.py  reward.py  task.py  transaction.py
apps/server/scripts/: backfill_pinned.py  migrate_user_progress.py  prestart.sh  seed_data.py
apps/server/services/: auth.py  reward.py  task.py  transaction.py
apps/server/tests/: conftest.py  test_analytics.py  test_daily_bonuses.py  test_task_pinning.py  test_uncomplete_task.py
(+159 files in other folders)
